--- a/mcbproj.ipynb
+++ b/mcbproj.ipynb
@@ -36,17 +36,22 @@
     "\n",
     "# fitnesses\n",
     "w11 = 1\n",
-    "w12 = 0.5\n",
-    "w13 = 0.5\n",
-    "w21 = 0.9\n",
+    "w12 = 0.1\n",
+    "w13 = 0.1\n",
+    "w21 = 0.1\n",
     "w22 = 1\n",
     "w23 = 0.1\n",
-    "w31 = 0.9\n",
+    "w31 = 0.1\n",
     "w32 = 0.1\n",
     "w33 = 1\n",
     "\n",
-    "transitionMatrix = np.array([[lambda11, lambda21, lambda31], [lambda12, lambda22, lambda32], [lambda13, lambda23, lambda33]]) \n",
-    "fitnessMatrix = np.array([[w11, w12, w13],[w21, w22, w23],[w31, w32, w33]])\n",
+    "transitionMatrix = np.array([[lambda11, lambda21, lambda31], \n",
+    "                             [lambda12, lambda22, lambda32], \n",
+    "                             [lambda13, lambda23, lambda33]]) \n",
+    "\n",
+    "fitnessMatrix = np.array([[w11, w12, w13],\n",
+    "                          [w21, w22, w23],\n",
+    "                          [w31, w32, w33]])\n",
     "\n",
     "w1 = fitnessMatrix[0]\n",
     "w2 = fitnessMatrix[1]\n",
@@ -113,7 +118,7 @@
     "plt.ylabel('Fitness')\n",
     "plt.ylim(0,1)\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
